compiler/testData/diagnostics/testsWithJsStdLib/name/illegalPackageName.kt
// FIR_IGNORE
// FIR_IDENTICAL
package <!INVALID_CHARACTERS!>`//`<!>

class A